content/packages/ai-guard/v0.2.1/fr/changelog.mdx
---
title: Journal des modifications
description: Historique des versions pour @edwinfom/ai-guard.
---

# Journal des modifications

Toutes les modifications notables apportées à `@edwinfom/ai-guard` sont documentées ici.

---

## v0.2.1 — 2026-04-13

### Nouvelles Fonctionnalités

- **`registerModelPricing()`** — Enregistrez un tarif personnalisé pour n'importe quel modèle au moment de l'exécution.
- **Nouveaux modèles dans `KnownModel`** — `gemini-2.5-flash`, `gemini-2.5-pro`, `gpt-4.1`, `gpt-4.1-mini`, `claude-3-7-sonnet-20250219` ajoutés à la table de tarification intégrée.
- **`extractJSON()` et `repairJSON()`** — Nouveaux exports standalone depuis `@edwinfom/ai-guard/schema`.
- **`estimateTokensByChars()`** — Nouvel export depuis `@edwinfom/ai-guard/budget` pour l'estimation de tokens par caractères.
- **`getPatternsForTargets()`** — Nouvel export depuis `@edwinfom/ai-guard/pii` pour récupérer les patterns regex bruts.
- **`InjectionResult`** — Type désormais exporté depuis `@edwinfom/ai-guard/injection`.
- **`RedactionResult`** — Type désormais exporté depuis `@edwinfom/ai-guard/pii`.
- **Playground Interactif** — Testez tous les modules standalone directement dans la documentation, sans clé API.

### Corrections de Bugs

- `registerModelPricing` persiste maintenant entre les frontières CJS/ESM via `globalThis`.
- `buildUsage` utilise correctement l'estimation par caractères quand les vrais comptages de tokens ne sont pas disponibles.

---

## v0.2.0 — 2026-04-11

### Nouvelles Fonctionnalités

- **Jetons Canaris** — Des marqueurs invisibles détectent la fuite du prompt système au moment de l'exécution
- **Politique de Contenu** — Détecte la toxicité, les discours de haine, la violence, l'automutilation, le contenu sexuel
- **Détection d'Hallucination** — Vérification d'ancrage d'entités nommées pour les pipelines RAG
- **Limiteur de Débit** — Limites de requêtes et de tokens par fenêtre glissante par utilisateur
- **Journal d'Audit** — Callback structuré à chaque appel de `protect()`
- Ajout des types PII français : NIR, SIRET, SIREN, passeport, date de naissance

### Changements Majeurs

- Le niveau de schéma 2 utilise désormais `jsonrepair` au lieu d'un extracteur regex personnalisé (+100 modèles couverts)

### Corrections de Bugs

- Correction de la validation des cartes de crédit (algorithme de Luhn désormais appliqué strictement)
- Correction de l'inférence générique TypeScript pour les schémas Zod imbriqués

---

## v0.1.0 — 2026-04-10

### Version Initiale

- Classe `Guardian` avec la méthode `protect()`
- Anonymisation PII : email, téléphone, creditCard, ssn, ipAddress, iban, url
- Application de schéma : réparation à 3 niveaux (nettoyage → extraction → réessai LLM)
- Détection d'injection de prompt : +15 modèles d'attaque avec niveaux de sensibilité
- Sentinelle budgétaire : comptage de tokens et estimation des coûts pour 7 modèles
- `protectStream()` pour le streaming asynchrone
- Analyse en mode `inspect()` (dry-run)
- Adaptateur Vercel AI SDK
- Adaptateur LangChain
- Exportations de sous-chemins tree-shakables
